data/derived/sp14/progs/unify/prog2349.ml.out
Characters 30-31:
  let _ = pipe [(fun x -> x+x)] 3;;
                                ^
Error: This expression has type int but an expression was expected of type
         int -> int
